package it.unibo.pps.e1;

public interface WithdrawalFee {

        int getFee(int amount);
}
